feat(fog): advance.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,26 @@
 spring.application.name=fog-application
+
+# Server Configuration
+server.port=8081
+
+# Edge Devices Communication
+edge.devices.connection.url=mqtt://localhost:1883
+edge.devices.topics.sensor-data=sensors/+/data
+edge.devices.topics.feeder-control=feeders/+/control
+
+# Cloud Backend Configuration
+cloud.backend.url=https://cloud-backend-url
+cloud.backend.sync.interval=300000
+
+# Local Database (for buffering)
+spring.datasource.url=jdbc:h2:file:./fog-db
+spring.datasource.driverClassName=org.h2.Driver
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+# Cache Configuration
+spring.cache.type=caffeine
+spring.cache.caffeine.spec=maximumSize=500,expireAfterWrite=300s
+
+# Device Communication Timeouts
+device.connection.timeout=5000
+device.response.timeout=3000
